--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>admin</title>
+    <style type="text/css">
+    .icon {
+       width: 1em; height: 1em;
+       vertical-align: -0.15em;
+       fill: currentColor;
+       overflow: hidden;
+    }
+</style>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_530480_runpl4kgn769lik9.css">
+    <script src="//at.alicdn.com/t/font_532685_72de9dj7s6ecdi.js"></script>
   </head>
   <body>
     <div id="app"></div>
