加入cdn 优化打包体积

--- a/order/index.html
+++ b/order/index.html
@@ -24,6 +24,11 @@
     <title>order</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_313716_nxy3880fotc07ldi.css">
     <script src="//at.alicdn.com/t/font_490403_1hkligd54d6ajor.js"></script>
+    <!-- 引入组件库 -->
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
+  <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
