--- a/order/index.html
+++ b/order/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!--忽略电话号码和email识别-->
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="email=no" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- UC强制全屏 -->
-    <meta name="full-screen" content="yes">
-    <!-- UC应用模式 -->
-    <meta name="browsermode" content="application">
-    <!-- QQ强制竖屏 -->
-    <meta name="x5-orientation" content="portrait">
-    <!-- QQ强制全屏 -->
-    <meta name="x5-fullscreen" content="true">
-    <!-- QQ应用模式 -->
-    <meta name="x5-page-mode" content="app">
-    <!--当网站添加到主屏幕快速启动方式，将网站添加到主屏幕快速启动方式-->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <!--隐藏ios上的浏览器地址栏-->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes,minimal-ui">
-    <title>order</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_313716_nxy3880fotc07ldi.css">
-    <script src="//at.alicdn.com/t/font_490403_1hkligd54d6ajor.js"></script>
-    <!-- 引入组件库 -->
+
+<head>
+  <meta charset="utf-8">
+  <!--忽略电话号码和email识别-->
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="format-detection" content="email=no" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- UC强制全屏 -->
+  <meta name="full-screen" content="yes">
+  <!-- UC应用模式 -->
+  <meta name="browsermode" content="application">
+  <!-- QQ强制竖屏 -->
+  <meta name="x5-orientation" content="portrait">
+  <!-- QQ强制全屏 -->
+  <meta name="x5-fullscreen" content="true">
+  <!-- QQ应用模式 -->
+  <meta name="x5-page-mode" content="app">
+  <!--当网站添加到主屏幕快速启动方式，将网站添加到主屏幕快速启动方式-->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!--隐藏ios上的浏览器地址栏-->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes,minimal-ui">
+  <title>order</title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_313716_nxy3880fotc07ldi.css">
+  <script src="//at.alicdn.com/t/font_490403_1hkligd54d6ajor.js"></script>
+  <!-- 引入组件库 -->
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://cdn.bootcss.com/axios/0.17.1/axios.min.js"></script>
   <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+  <script src="https://unpkg.com/vant/lib/vant.min.js"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
